[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["hannesk95 <hannes.kiechle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
sphinx = "^8.0.2"
fire = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
